--- a/vignettes/DECIPHERing.Rnw
+++ b/vignettes/DECIPHERing.Rnw
@@ -59,7 +59,15 @@ options(width=80)
 \section{About DECIPHER}
 %------------------------------------------------------------
 
-\term{D}atabase \term{E}nabled \term{C}ode for \term{I}deal \term{P}robe \term{H}ybridization \term{E}mploying \term{R} (\Rpackage{DECIPHER}) is a software toolset that can be used for deciphering and managing biological sequences efficiently using the \R{} statistical programming language.  The project originally sprang to life as a program for developing hybridization probes for a variety of applications using 16S rRNA sequences.  The program's functionality has expanded considerably since its conception, and now \Rpackage{DECIPHER} can be used for next generation sequence analysis, multiple sequence alignment, and phylogenetics, in addition to oligonucleotide design.  \Rpackage{DECIPHER} is available under the terms of the GNU Public License version 3 (\url{http://www.gnu.org/copyleft/gpl.html}).
+\Rpackage{DECIPHER} is a software toolset that can be used for deciphering and managing biological sequences efficiently using the \R{} statistical programming language.  The program features tools falling into five categories:
+\begin{itemize}
+\item Sequence databases: import, maintain, view, and export a massive number of sequences.
+\item Sequence alignment: accurately align thousands of DNA, RNA, or amino acid sequences. Quickly find and align the syntenic regions of multiple genomes.
+\item Oligo design: test oligos in silico, or create new primer and probe sequences optimized for a variety of objectives.
+\item Manipulate sequences: correct frameshifts, reorient nucleotides, determine consensus, or digest with restriction enzymes.
+\item Analyze sequences: find chimeras, predict secondary structure, and create phylogenetic trees.
+\end{itemize}
+\Rpackage{DECIPHER} is available under the terms of the \underline{\href{http://www.gnu.org/copyleft/gpl.html}{GNU Public License version 3}}.
 
 %------------------------------------------------------------
 \section{Design Philosophy}
@@ -67,27 +75,27 @@ options(width=80)
 
 \subsection{Curators Protect the Originals}
 
-One of the core principles of \Rpackage{DECIPHER} is the idea of the non-destructive workflow.  This revolves around the concept that the original sequence information should never be altered:  sequences are exported looking identical to how they were when they were first imported.  Essentially, the sequence information in the database is thought of as a backup of the original sequence file and no function is able to directly alter the sequence data.  All of the workflows simply \term{add} information to the database, which can be used to maintain, analyze, and decipher the sequences.  When it comes time to export all or part of the sequences they are preserved in their original state without alteration.
+One of the core principles of \Rpackage{DECIPHER} is the idea of the non-destructive workflow.  This revolves around the concept that the original sequence information should never be altered:  sequences are exported looking identical to how they were when they were first imported.  Essentially, the sequence information in the database is thought of as a backup of the original sequence file and no function is able to directly alter the sequence data.  All of the workflows simply \term{add} information to the database, which can be used to analyze, organize, and maintain the sequences.  When it comes time to export all or part of the sequences they are preserved in their original state without alteration.
 
 \subsection{Don't Reinvent the Wheel}
 
-\Rpackage{DECIPHER} makes use of the \Rpackage{Biostrings} package that is a core part of the Bioconductor suite (\url{http://www.bioconductor.org/}).  This package contains numerous functions for common operations such as searching, manipulating, and reverse complementing sequences.  Furthermore, \Rpackage{DECIPHER} makes use of the \Rpackage{Biostrings} interface for handling sequence data so that sequences are stored in an \Robject{XStringSet}.  These objects are compatible with many useful packages in the Bioconductor suite.
+\Rpackage{DECIPHER} makes use of the \Rpackage{Biostrings} package that is a core part of the \underline{\href{http://www.bioconductor.org/}{Bioconductor suite}}.  This package contains numerous functions for common operations such as searching, manipulating, and reverse complementing sequences.  Furthermore, \Rpackage{DECIPHER} makes use of the \Rpackage{Biostrings} interface for handling sequence data so that sequences are stored in \Robject{XStringSet} objects.  These objects are compatible with many useful packages in the Bioconductor suite.
 
-A wide variety of user objectives necessitates that \Rpackage{DECIPHER} be extensible to customized projects.  \R{} provides a simple way to place the power of thousands of packages at your fingertips.  Likewise, \R{} enables direct access to the speed and efficiency of the programming language \C{} while maintaining the utility of a scripting language.  Therefore, minimal coding skill is required to solve complex new problems.  Best of all, the \R{} statistical programming language is open source, and maintains a thriving user community so that direct collaboration with other \R{} users is available on several Internet forums \url{https://stat.ethz.ch/mailman/listinfo}.
+A wide variety of user objectives necessitates that \Rpackage{DECIPHER} be extensible to customized projects.  \R{} provides a simple way to place the power of thousands of packages at your fingertips.  Likewise, \R{} enables direct access to the speed and efficiency of the programming language \C{} while maintaining the utility of a scripting language.  Therefore, minimal coding skill is required to solve complex new problems.  Best of all, the \R{} statistical programming language is open source, and maintains a thriving user community so that direct collaboration with other \R{} users is available on \underline{\href{https://stat.ethz.ch/mailman/listinfo}{several Internet forums}}.
 
 \subsection{That Which is the Most Difficult, Make Fastest}
 
-A core objective of \Rpackage{DECIPHER} is to make massive tasks feasible in minimal time.  To this end, many of the most time consuming functions are parallelized to make use of multiple processors.  For example, the function \Rfunction{DistanceMatrix} gets almost a 1x speed boost for each processor core.  A modern processor with 8 cores can see a factor of close to eight times speed improvement.  Similar speedups can be achieved when clustering the resulting distance matrix using \Rfunction{IdClusters}, and in many other \Rpackage{DECIPHER} functions.  This is all made possible through the integration of OpenMP, which is currently supported by default on most major platforms.
+A core objective of \Rpackage{DECIPHER} is to make massive tasks feasible in minimal time.  To this end, many of the most time consuming functions are parallelized to make use of multiple processors.  For example, the function \Rfunction{DistanceMatrix} gets almost a 1x speed boost for each processor core.  A modern processor with 8 cores can see a factor of close to eight times speed improvement.  Similar speedups can be achieved in many other \Rpackage{DECIPHER} functions by setting the \Rfunarg{processors} argument.  This is all made possible through the integration of OpenMP in \C{}-level code.
 
 Other time consuming tasks are handled efficiently.  The function \Rfunction{FindChimeras} can uncover sequence chimeras by searching through a reference database of over a million sequences for thousands of 30-mer fragments in a number of minutes.  This incredible feat is accomplished by using the \Rclass{PDict} class provided by \Rpackage{Biostrings}.  Similarly, the \Rfunction{SearchDB} function can obtain the one-in-a-million sequences that match a targeted query in a matter of seconds.  Such high-speed functions enable the user to find solutions to problems that previously would have been extremely difficult or nearly impossible to solve using antiquated methods.
 
 \subsection{Stay Organized}
 
-It is no longer necessary to store related data in several different files.  \Rpackage{DECIPHER} is enabled by \Rpackage{RSQLite}, which is an \R{} interface to \term{SQLite} databases \url{http://www.sqlite.org/}.  \Rpackage{DECIPHER} creates an organized collection of sequences and their associated information known as a sequence database.  \term{SQLite} databases are flat files, meaning they can be handled just like any other file.  There is no setup required since \term{SQLite} does not require a server, unlike other client database engines.  These attributes of \term{SQLite} databases make storing, backing-up, and sharing sequence databases relatively straightforward.
+It is no longer necessary to store related data in several different files.  \Rpackage{DECIPHER} is enabled by \Rpackage{RSQLite}, which is an \R{} interface to \underline{\href{http://www.sqlite.org/}{SQLite databases}}.  \Rpackage{DECIPHER} creates an organized collection of sequences and their associated information known as a sequence database.  \term{SQLite} databases are flat files, meaning they can be handled just like any other file.  There is no setup required since \term{SQLite} does not require a server, unlike other client database engines.  These attributes of \term{SQLite} databases make storing, backing-up, and sharing sequence databases relatively straightforward.
 
 Separate projects can be stored in distinct tables in the same sequence database.  Each new table is structured to include every sequence's description, identifier, and a unique key called the \term{row_name} all in one place.  The sequences are referenced by their \term{row_names} or \term{identifier} throughout most functions in the package.  Using \term{row_names}, new information created using \Rpackage{DECIPHER} functions is added as additional database columns to their respective sequences' rows in the database table.  To prevent the database from seeming like a black box there is a function named \Rfunction{BrowseDB} that facilitates viewing of the database contents in a web browser.  A similar function is available to view sequences called \Rfunction{BrowseSeqs}.
 
-The amount of DNA sequence information available is currently increasing at a phenomenal rate.  \Rpackage{DECIPHER} stores individual sequences using \term{gzip} compression so that the database file takes up much less drive space than a standard text file of sequences.  The compressed sequences are stored in a hidden table that is linked to the information table.  For example, by default sequence information is stored in the table ``DNA'', and the associated sequences are stored in the table ``_DNA''.  Storing the sequences in a separate table greatly improves access speed when there is a large amount of sequence information.  Separating projects into distinct tables further increases query speed over that of storing every project in a single table.
+The amount of DNA sequence information available is currently increasing at a phenomenal rate.  \Rpackage{DECIPHER} stores individual sequences using a custom compression format, called \term{nbit}, so that the database file takes up much less drive space than a standard text file of sequences.  The compressed sequences are stored in a hidden table that is linked to the information table.  For example, by default sequence information is stored in the table ``Seqs'', and the associated sequences are stored in the table ``_Seqs''.  Storing the sequences in a separate table greatly improves access speed when there is a large amount of sequence information.  Separating projects into distinct tables further increases query speed over that of storing every project in a single table.
 
 %------------------------------------------------------------
 \section{Functionality}
@@ -133,7 +141,7 @@ The functions of DECIPHER can be grouped into several categories based on intend
 \subsection{Typical Installation (recommended)}
 
 \begin{enumerate}
-\item Install the latest version of \R{} from \url{http://www.r-project.org/}.
+\item Install the latest version of \R{} from \underline{\url{http://www.r-project.org/}}.
 \item Install \Rpackage{DECIPHER} in R by entering:
 \begin{Schunk}
 \begin{Sinput}
@@ -146,7 +154,7 @@ The functions of DECIPHER can be grouped into several categories based on intend
 \subsection{Update to the Latest Version}
 
 \begin{enumerate}
-\item Update \R{} to the latest version available from \url{http://www.r-project.org/}.
+\item Update \R{} to the latest version available from \underline{\url{http://www.r-project.org/}}.
 \item Reinstall \Rpackage{DECIPHER} in R by entering:
 \begin{Schunk}
 \begin{Sinput}
@@ -161,7 +169,7 @@ The functions of DECIPHER can be grouped into several categories based on intend
 \subsubsection{All platforms}
 
 \begin{enumerate}
-\item Install the latest \R{} version from \url{http://www.r-project.org/}.
+\item Install the latest \R{} version from \underline{\url{http://www.r-project.org/}}.
 \item Install \Rpackage{Biostrings} in R by entering:
 \begin{Schunk}
 \begin{Sinput}
@@ -176,7 +184,7 @@ The functions of DECIPHER can be grouped into several categories based on intend
 > biocLite("RSQLite")
 \end{Sinput}
 \end{Schunk}
-\item Download \Rpackage{DECIPHER} from \url{http://DECIPHER.cee.wisc.edu}.
+\item Download \Rpackage{DECIPHER} from \underline{\url{http://DECIPHER.cee.wisc.edu}}.
 \end{enumerate}
 
 \subsubsection{Mac OS X}
@@ -190,7 +198,7 @@ The functions of DECIPHER can be grouped into several categories based on intend
 \end{Schunk}
 \item Second Option (more difficult but enables parallelization):
 \begin{enumerate}[(a)]
-\item Open the DECIPHER source folder.  Remove the file named ``Makevars'' in the ``src'' folder.  Then save a text-file with the line ``CC=gcc-4.2 -std=gnu99'' to ``{\raise.17ex\hbox{$\scriptstyle\sim$}}/.R/Makevars''.  This will force packages to be compiled with gcc-4.2 instead of the default llvm.
+\item Open the DECIPHER source folder.  Remove the file named ``Makevars'' in the ``src'' folder.  Then save a text-file with the line ``CC=gcc-4.2 -std=gnu99'' to ``{\raise.17ex\hbox{$\scriptstyle\sim$}}/.R/Makevars''.  This will force packages to be compiled with gcc-4.2 instead of the default llvm.  Note that gcc needs to be separately installed on Mac OS $\ge 10.8$.
 \item Open Terminal, and in the command prompt enter:
 \begin{Schunk}
 \begin{Sinput}
@@ -223,7 +231,7 @@ Two options are available:  the first is simplest, but requires the pre-built bi
 \end{Schunk}
 \item Second Option (more difficult):
 \begin{enumerate}[(a)]
-\item Install Rtools from \url{http://cran.r-project.org/bin/windows/Rtools/}.   Be sure to check the box that says edit PATH during installation.
+\item Install Rtools from \underline{\url{http://cran.r-project.org/bin/windows/Rtools/}}.   Be sure to check the box that says edit PATH during installation.
 \item Open a MS-DOS command prompt by clicking Start -> All Programs -> Accessories -> Command Prompt.
 \item In the command prompt enter:
 \begin{Schunk}
@@ -246,13 +254,14 @@ library(DECIPHER)
 @
 
 Help for any function can be accessed through a command such as:
+
 \begin{Schunk}
 \begin{Sinput}
 > ? DECIPHER
 \end{Sinput}
 \end{Schunk}
 
-To begin we can import a GenBank file of sequences into a sequence database.  We need to provide an arbitrary sequence \term{identifier} to \Rfunction{Seqs2DB}, which we will call ``Bacteria''.  The \term{identifier} is used by many \Rpackage{DECIPHER} functions to reference a specific set of sequences in the database:
+To begin, we can import a FASTA, FASTQ, or GenBank file into a sequence database.  In this example, we will use a GenBank file that is included with \Rpackage{DECIPHER} installation.  We must set the sequences' \term{identifier} when importing with \Rfunction{Seqs2DB}.  Here we will identify the sequences with the word ``Bacteria''.  The \term{identifier} is used by many \Rpackage{DECIPHER} functions to reference a specific set of sequences in the database, and can be reset at a later time using a number of different methods:
 <<expr1>>=
 # access a sequence file included in the package:
 gen <- system.file("extdata", "Bacteria_175seqs.gen", package="DECIPHER")
@@ -273,7 +282,7 @@ Suppose we wanted to count the number of bases in each sequence and add that inf
 <<expr3>>=
 l <- IdLengths(dbConn)
 head(l)
-Add2DB(l, dbConn)
+Add2DB(l, dbConn, verbose=FALSE)
 BrowseDB(dbConn, maxChars=20)
 @
 
@@ -294,7 +303,7 @@ BrowseDB(dbConn, maxChars=20)
 
 We can now look at only those sequences that belong to the phylum \term{Bacteroidetes} (Fig. 2):
 <<expr5>>=
-dna <- SearchDB(dbConn, id="Bacteroidetes")
+dna <- SearchDB(dbConn, identifier="Bacteroidetes")
 BrowseSeqs(subseq(dna, 140, 240))
 @
 
@@ -318,7 +327,8 @@ c <- IdClusters(d, method="ML", cutoff=.05, showPlot=TRUE, myXStringSet=dna, ver
 
 \clearpage
 
-We could then use the command below to save the in-memory database to a file for long term storage.  Be sure to change the path names to those on your system by replacing all of the text inside quotes labeled ``$<<$path to ...$>>$'' with the actual path on your system.
+Here we created the database in-memory by connecting to ``:memory:'' above.  This works fine for small databases, but it is necessary to initialize larger databases with a quoted file path rather than ``:memory:''.  Optionally, we could use the command below to save an in-memory database to a file for long term storage.  Be sure to change the path names to those on your system by replacing all of the text inside quotes labeled ``$<<$path to ...$>>$'' with the actual path on your system.
+
 \begin{Schunk}
 \begin{Sinput}
 > sqliteCopyDatabase(dbConn, "<<path to database>>")
